--- a/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/CarouselViewGalleries/CarouselXamlGallery.xaml
+++ b/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/CarouselViewGalleries/CarouselXamlGallery.xaml
@@ -14,13 +14,13 @@
         <Slider Margin="5" Value="{Binding Position, Mode=TwoWay}" Maximum="{Binding Count}" />
         <StackLayout Orientation="Horizontal" Grid.Row="1">
             <Label Text="Position:" />
-            <Label Text="{Binding Path=Position , Source={x:Reference Name=carousel}}"/>
+            <Label Text="{Binding Path=Position , Source={x:Reference Name=carousel}}"  AutomationId="lblPosition"/>
             <Label Text="CurrentItem :" />
-            <Label Text="{Binding Path=CurrentItem.Index , Source={x:Reference Name=carousel}}"/>
+            <Label Text="{Binding Path=CurrentItem.Index , Source={x:Reference Name=carousel}}" AutomationId="lblCurrentItem"/>
             <Label Text="Selected: " />
-            <Label Text="{Binding Selected.Index}"/>
+            <Label Text="{Binding Selected.Index}" AutomationId="lblSelected"/>
         </StackLayout>
-        <Button Command="{Binding RemoveCommand}" Grid.Row="2"
+        <Button Command="{Binding RemoveCommand}" Grid.Row="2" AutomationId="btnRemove"
                 Text="{Binding Selected.Index}" BackgroundColor="LightGray" TextColor="Black" />
         <CarouselView AutomationId="TheCarouselView" x:Name="carousel" ItemsSource="{Binding Items}" Position="{Binding Position}" Grid.Row="3"
                       CurrentItem="{Binding Selected}" >
